Add initial html with book form

--- a/index.html
+++ b/index.html
@@ -15,36 +15,44 @@
     <header>
         <h1>Library</h1>
 
-        <button>+</button>
+        <button class="button button--plus">+</button>
+
     </header>
 
-    <div id="modal-book-form">
-        <h3>Add a Book</h3>
+    <div id="overlay">
+    </div>
 
-        <form>
-            <div class="input-container">
-                <label for="title">Title</label>
-                <input class="input" type="text" name="title" id="title">
-            </div>
+    <div id="modal-book">
 
-            <div class="input-container">
-                <label for="author">Author</label>
-                <input class="input" type="text" name="author" id="author">
-            </div>
+        <div>
+            <h3>Add a Book</h3>
 
-            <div class="input-container">
-                <label for="pages">Pages</label>
-                <input class="input" type="number" name="pages" id="pages">
-            </div>
+            <form class="form">
+                <div class="input-container">
+                    <label for="title">Title</label>
+                    <input class="input" type="text" name="title" id="title">
+                </div>
 
-            <div class="checkbox-container">
-                <input type="checkbox" name="read" id="read">
-                <label for="read" class="unselectable">Have you read it?</label>
-            </div>
+                <div class="input-container">
+                    <label for="author">Author</label>
+                    <input class="input" type="text" name="author" id="author">
+                </div>
 
-            <button type="submit" class="button button--submit">Add</button>
+                <div class="input-container">
+                    <label for="pages">Pages</label>
+                    <input class="input" type="number" name="pages" id="pages">
+                </div>
 
-        </form>
+                <div class="checkbox-container">
+                    <input type="checkbox" name="read" id="read">
+                    <label for="read" class="unselectable">Have you read it?</label>
+                </div>
+
+                <button type="submit" class="button button--submit">Add</button>
+
+            </form>
+        </div>
+
     </div>
 </body>
 
